# frida-python

./: .gitignore  .gitmodules  MANIFEST.in  Makefile  README.md  autogen.sh  config.h.in  configure.ac  frida-python-common.props  frida-python.vcxproj  frida-python.vcxproj.filters  frida-python2.vcxproj  frida-python27.vcxproj  frida-python27.vcxproj.filters  frida-python3.vcxproj  frida-python33.vcxproj  frida-python33.vcxproj.filters  frida-python34.vcxproj  frida-python35.vcxproj  frida-python35.vcxproj.filters  frida-python36.vcxproj  frida-python36.vcxproj.filters  frida-python37.vcxproj  frida-python38.vcxproj  meson.build  meson.options  meson_options.txt  pyproject.toml  setup.cfg  setup.py
.github/workflows/: code-style.yml  linting.yml  tests.yml
_frida/: __init__.pyi
examples/: bytecode.py  channels.py  child_gating.py  crash_reporting.py  detached.py  enumerate_applications.py  enumerate_processes.py  get_frontmost_application.py  portal_client.py  portal_server.py  query_system_parameters.py  rpc.py  session_persist_timeout.py  snapshot.py  spawn_gating.py  unpair.py  web_gateway.py
examples/cpushark/: AppDelegate.py  Capture.py  CpuShark.py  MainMenu.xib  MainWindow.xib  MainWindowController.py  Makefile  ProcessList.py  setup.py
examples/function-tracing/: funtracer.py
examples/inject_library/: example.c  inject_blob.py  inject_file.py
examples/open_service/: plist.py  xpc.py
examples/open_service/dtx/: deviceinfo.py  opengl.py  processcontrol.py  screenshot.py  sysmontap.py
examples/open_service/xpc/: launchapplication.py
examples/web_client/: package-lock.json  package.json  vue.config.js
examples/web_client/src/: main.ts
examples/web_client/src/components/: HelloWorld.vue
examples/web_client/src/store/: index.ts
examples/web_client/src/store/modules/: frida.ts
examples/web_client/src/store/plugins/: frida.ts  message-event-stream.ts
frida/: __init__.py  __init__.pyi  core.py  core.pyi  extension.version  meson.build
frida/_frida/: __init__.pyi  extension.c  meson.build
frida/frida_bindgen/: cli.py  codegen.py  customization.py  loader.py  model.py
frida/frida_bindgen/assets/: codegen_endpoint_parameters.c  codegen_gobject_globals.c  codegen_gobject_methods.c  codegen_gobject_prototypes.h  codegen_helpers.c  codegen_helpers.ts  codegen_macros.h  codegen_prototypes.h  codegen_structs.h  codegen_typedefs.h  codegen_types.h  customization_facade.exports  customization_facade.ts  customization_helpers.imports  customization_helpers.ts  facade_bus.py  facade_bus_aio.py  facade_cancellable.py  facade_cancellable_aio.py  facade_cancellable_helpers.py  facade_cancellable_helpers_aio.py  facade_device_manager_members.py  facade_device_manager_members_aio.py  facade_device_members.py  facade_device_members_aio.py  facade_epilogue.py  facade_interface.py  facade_interface_aio.py  facade_iostream.py  facade_iostream_aio.py  facade_portal.py  facade_portal_aio.py  facade_rpc_helpers.py  facade_rpc_helpers_aio.py  facade_rpc_members.py  facade_rpc_members_aio.py  facade_toplevel.py  facade_toplevel_aio.py  facade_types.py  module_get_device_manager.c
frida_tools/: application.py  discoverer.py  frida-ls-devices.in  kill.py  lsd.py  model.py  ps.py  repl.py  tracer.py
scripts/: version.py
src/: Makefile.am  _frida.c  _frida.version  frida-discover.in  frida-ps.in  frida-repl.in  frida-trace.in  frida.py  meson.build  pyfrida.c  setup.py  setup.py.in  tracer.py
src/frida/: Makefile.am  __init__.py  application.py  core.py  discoverer.py  kill.py  lsd.py  meson.build  ps.py  repl.py  tracer.py
src/scripts/: Makefile.am  frida-discover.in  frida-kill.in  frida-ls-devices.in  frida-ps.in  frida-trace.in  frida.in  meson.build
subprojects/: frida-core.wrap
tests/: __init__.py  compile_bindgen.sh  run_bindgen.sh  test_bindgen.py  test_core.py  test_discoverer.py  test_pep503_page_parser.py  test_rpc.py  test_tracer.py
tests/data/: __init__.py  unixvictim-freebsd-arm64  unixvictim-freebsd-x86_64  unixvictim-linux-arm64  unixvictim-linux-armhf  unixvictim-linux-x86  unixvictim-linux-x86_64  unixvictim-mac  unixvictim-macos
tools/: discoverer.py  lsd.py  ps.py  repl.py
